--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mysql2": "^3.14.4",
     "yup": "^1.7.0"
   },
@@ -20,7 +21,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/NeoFlake/XpressMovies/issues"
   },
