--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mysql2": "^3.14.4",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "yup-locales": "^1.2.28"
   },
   "name": "xpressmovies",
   "version": "1.0.0",
